dnl Process this file with autoconf to produce a configure script.
dnl
AC_PREREQ(2.5)
AC_INIT(initscan.c)
AC_CONFIG_HEADER(config.h:conf.in)

AC_LN_S
AC_PROG_YACC
dnl CYGNUS LOCAL: get $CC from the environment or use `cc'
CC=${CC-cc}
AC_SUBST(CC)
dnl AC_PROG_CC
AC_PROG_CC
AC_PROG_RANLIB
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_CONST
AC_TYPE_SIZE_T
AC_HEADER_STDC
AC_HAVE_HEADERS(string.h malloc.h sys/types.h)
AC_FUNC_ALLOCA

AM_EXEEXT

AC_OUTPUT(Makefile,
[test -z "$CONFIG_HEADERS" || echo timestamp > stamp-h])
