AC_PREREQ(2.5)
AC_INIT(send-pr.sh)

AC_PROG_INSTALL

AC_SUBST(PRMS_ROOT)dnl
AC_SUBST(PRMS_ADDR)dnl
AC_SUBST(PRMS_SITE)dnl
AC_SUBST(DEFAULT_RELEASE)dnl
AC_SUBST(DEFAULT_ORGANIZATION)dnl
AC_SUBST(MAIL_AGENT)dnl
AC_SUBST(SUBMITTER)dnl
AC_SUBST(ECHON)dnl

AC_ECHON
AC_LISPDIR
AC_PASSWD

if test -z "${PRMS_SITE}"; then
   PRMS_SITE=cygnus
fi
SUBMITTER=unknown
if test -z "${PRMS_ADDR}"; then
   PRMS_ADDR=bugs@cygnus.com
fi
DEFAULT_ORGANIZATION=

AC_FIND_PROGRAM(SENDMAIL,sendmail,/usr/lib:/usr/sbin:/usr/ucblib)
if test -n "$SENDMAIL" ; then
	MAIL_AGENT="$SENDMAIL -oi -t"
else
	MAIL_AGENT=false
fi

if test -f ${srcdir}/../release-info ; then
	DEFAULT_RELEASE=`. ${srcdir}/../release-info ; echo ${RELEASE_TAG}`
else
	DEFAULT_RELEASE='prms-$(VERSION)'
fi

if test "x$prefix" != xNONE; then
  PRMS_PREFIX=$prefix
else
  PRMS_PREFIX=$ac_default_prefix
fi

# Get PRMS_ROOT from environment, if possible
if test -n "$with_prms_root"; then
	PRMS_ROOT=$with_prms_root
fi

if test -z "${PRMS_ROOT}"; then
	PRMS_ROOT=$PRMS_PREFIX/lib/prms/prms-root
	_PR=${PRMS_ROOT}
fi

AC_FIND_PROGRAM(SEND_PR,send-pr)
if test -n "${SEND_PR}"; then
	test -n "${_PR}" && eval `grep '^PRMS_ROOT=' ${SEND_PR}`
	eval `grep '^SUBMITTER=' ${SEND_PR}`
	eval `egrep '^PRMS_(ADDR|SITE)=' ${SEND_PR}`
	eval `egrep '^DEFAULT_ORGANIZATION=' ${SEND_PR}`
fi

# If the config file exists, it may have more recent info than send-pr
echo checking for PRMS configuration file
test -f ${PRMS_ROOT}/prms-adm/config && . ${PRMS_ROOT}/prms-adm/config

if test -n "${_PR}" -a "${PRMS_ROOT}" = "${_PR}"; then
	PRMS_ROOT=
fi

if test -n "$verbose"; then
	echo "	setting PRMS_ROOT to $PRMS_ROOT"
	echo "	setting PRMS_SITE to $PRMS_SITE"
	echo "	setting PRMS_ADDR to $PRMS_ADDR"
	echo "	setting SUBMITTER to $SUBMITTER"
	echo "	setting DEFAULT_RELEASE to $DEFAULT_RELEASE"
	echo "	setting DEFAULT_ORGANIZATION to $DEFAULT_ORGANIZATION"
	echo "	setting MAIL_AGENT to $MAIL_AGENT"
fi

AC_OUTPUT(Makefile)
