dnl Process this file with autoconf to produce a configure script.

dnl This file is part of winsup/mingw
dnl
dnl This program is free software; you can redistribute it and/or modify
dnl it under the terms of the GNU General Public License as published by
dnl the Free Software Foundation; either version 2 of the License, or
dnl (at your option) any later version.
dnl
dnl This program is distributed in the hope that it will be useful,
dnl but WITHOUT ANY WARRANTY; without even the implied warranty of
dnl MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
dnl GNU General Public License for more details.
dnl
dnl You should have received a copy of the GNU General Public License
dnl along with this program; if not, write to the Free Software
dnl Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA 02111-1307, USA.

AC_PREREQ(2.12)
AC_INIT(CRTglob.c)

CC=${CC-cc}
AC_SUBST(CC)
AS=${AS-as}
AC_SUBST(AS)
AR=${AR-ar}
AC_SUBST(AR)
LD=${LD-ld}
AC_SUBST(LD)
RANLIB=${RANLIB-ranlib}
AC_SUBST(RANLIB)
DLLTOOL=${DLLTOOL-dlltool}
AC_SUBST(DLLTOOL)
AC_CANONICAL_SYSTEM

AC_PROG_INSTALL

DLL_ENTRY="_dll_entry@12"
DEF_DLL_ENTRY="dll_entry@12"

AC_SUBST(DLL_ENTRY)
AC_SUBST(DEF_DLL_ENTRY)
AC_OUTPUT(Makefile)
